--- a/main.ipynb
+++ b/main.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "4a835fc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,6 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "7c44f011",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,6 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "369b16a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,17 +170,18 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "b3d42943",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4da176f2f7db479fa13d2c8a75cca3eb",
+       "model_id": "c231b57b4a274d9a9701265ea5b9f538",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "AppLayout(children=(VBox(children=(Label(value='Light Collector Simulator'), HBox(children=(Dropdown(options=(…"
+       "AppLayout(children=(VBox(children=(HTML(value=\" <h1 style='color:blue;margin-:100px'; text-align:center><u><b>…"
       ]
      },
      "metadata": {},
@@ -191,6 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "80ba3d3a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -198,7 +203,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "686889071841a2d96f5afacdcbbcc351fa448ceca54b1a0830e1814f537d6c18"
+   "hash": "5816dece9e3ca6d9d7c6fe5fb8133d68031d3d34ea738a35261f7fab18b73971"
   },
   "kernelspec": {
    "display_name": "Python [conda env:jupyEnv] *",
@@ -215,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
