add reflected rays

--- a/main.ipynb
+++ b/main.ipynb
@@ -8,13 +8,14 @@
    "source": [
     "%matplotlib widget\n",
     "\n",
+    "from imports import * \n",
     "from Head_content import head_content\n",
     "from Left_content import left_content\n",
     "from Center_content import  center_content\n",
     "from Right_content import right_content\n",
     "from plot_geometry import plot_geometry\n",
     "from plot_incident_rays import plot_incident_rays\n",
-    "from imports import * \n",
+    "from plot_reflected_rays import plot_reflected_rays\n",
     "\n",
     "plt.ioff()\n",
     "\n",
@@ -160,8 +161,45 @@
     "        inc_ray_plot.plot_incident_parabola()\n",
     "    if value == 2:\n",
     "        inc_ray_plot.plot_incident_ringArray\n",
-    "        \n",
+    "\n",
     "L.plot_inc_bt.on_click(plot_incident_rays)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63e12942",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update the list of varables for calculations\n",
+    "variables = L.variables\n",
+    "\n",
+    "# Reflected rays plotter instance\n",
+    "refl_ray_plot = plot_reflected_rays(n_phi=variables['n_phi'], n_theta=variables['n_theta'], refl_rayClr_value=variables['refl_rayClr_value'], \n",
+    "                                  N=variables['ringArray_N_rings'], h=variables['parabola_height'], pt_source_pos=variables['pt_source_coordinate'],\n",
+    "                                  h_2D=h_2D, focs=focs, inters=inters, rx=rx, yl_min=yl_min,yl_max=yl_max, parabola_rings=parabola_rings,\n",
+    "                                  center_instance=C, left_instance=L, parabolic=parabolic_calc, ring=ring_calc)\n",
+    "\n",
+    "\n",
+    "\n",
+    "def plot_reflected_rays(*arg):\n",
+    "    # Update the list of varables for calculations\n",
+    "    variables = L.variables\n",
+    "    value = H.collector_type.value\n",
+    "    \n",
+    "    # Reflected rays plotter init update\n",
+    "    refl_ray_plot.update_init(n_phi=variables['n_phi'], n_theta=variables['n_theta'], refl_rayClr_value=variables['refl_rayClr_value'], \n",
+    "                              N=variables['ringArray_N_rings'], h=variables['parabola_height'], pt_source_pos=variables['pt_source_coordinate'],\n",
+    "                              h_2D=h_2D, focs=focs, inters=inters, rx=rx, yl_min=yl_min,yl_max=yl_max, parabola_rings=parabola_rings,\n",
+    "                              center_instance=C, left_instance=L, parabolic=parabolic_calc, ring=ring_calc)\n",
+    "    \n",
+    "    if value == 1:\n",
+    "        refl_ray_plot.plot_reflected_parabola()\n",
+    "    if value == 2:\n",
+    "        refl_ray_plot.plot_reflected_ringArray()\n",
+    "    \n",
+    "L.plot_refl_bt.on_click(plot_reflected_rays)"
    ]
   },
   {
