zoom and projection done

--- a/main.ipynb
+++ b/main.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "5e94e4ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +17,8 @@
     "from plot_geometry import plot_geometry\n",
     "from plot_incident_rays import plot_incident_rays\n",
     "from plot_reflected_rays import plot_reflected_rays\n",
+    "from plot_zoom import plot_zoom\n",
+    "from plot_projection import plot_projection\n",
     "\n",
     "plt.ioff()\n",
     "\n",
@@ -69,6 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "fa9d7430",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +107,7 @@
     "def plot_collector_geometry(*arg):\n",
     "    \n",
     "    global phi_tab, z_tab, rx, ry, inters, inters_lambda, yl_min, yl_max, zl_min, zl_max, parabola_rings, h_2D, focs\n",
-    "    \n",
+    "    C.main_scene.scatters.clear()\n",
     "    value = H.collector_type.value\n",
     "    # Update the list of varables for calculations\n",
     "    variables = L.variables\n",
@@ -134,6 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "34ebd8f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,6 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "f7b4bb9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +184,7 @@
     "refl_ray_plot = plot_reflected_rays(n_phi=variables['n_phi'], n_theta=variables['n_theta'], refl_rayClr_value=variables['refl_rayClr_value'], \n",
     "                                  N=variables['ringArray_N_rings'], h=variables['parabola_height'], pt_source_pos=variables['pt_source_coordinate'],\n",
     "                                  h_2D=h_2D, focs=focs, inters=inters, rx=rx, yl_min=yl_min,yl_max=yl_max, parabola_rings=parabola_rings,\n",
-    "                                  center_instance=C, left_instance=L, parabolic=parabolic_calc, ring=ring_calc)\n",
+    "                                  center_instance=C, left_instance=L, parabolic=parabolic_calc)\n",
     "\n",
     "\n",
     "\n",
@@ -191,7 +197,7 @@
     "    refl_ray_plot.update_init(n_phi=variables['n_phi'], n_theta=variables['n_theta'], refl_rayClr_value=variables['refl_rayClr_value'], \n",
     "                              N=variables['ringArray_N_rings'], h=variables['parabola_height'], pt_source_pos=variables['pt_source_coordinate'],\n",
     "                              h_2D=h_2D, focs=focs, inters=inters, rx=rx, yl_min=yl_min,yl_max=yl_max, parabola_rings=parabola_rings,\n",
-    "                              center_instance=C, left_instance=L, parabolic=parabolic_calc, ring=ring_calc)\n",
+    "                              center_instance=C, left_instance=L, parabolic=parabolic_calc)\n",
     "    \n",
     "    if value == 1:\n",
     "        refl_ray_plot.plot_reflected_parabola()\n",
@@ -204,12 +210,81 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "83fdf409",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update the list of varables for calculations\n",
+    "variables = L.variables\n",
+    "\n",
+    "# Zoom plotting instance\n",
+    "zoom_plot = plot_zoom(n_phi=variables['n_phi'], n_theta=variables['n_theta'], h_2D=h_2D, focs=focs, \n",
+    "                      N=variables['ringArray_N_rings'], pt_source_pos=variables['pt_source_coordinate'],\n",
+    "                      parabola_rings=parabola_rings, center_instance=C, right_instance=R, parabolic=parabolic_calc)\n",
+    "\n",
+    "def plot_zoom_rays(*arg):\n",
+    "    # Update the list of varables for calculations\n",
+    "    variables = L.variables\n",
+    "    value = H.collector_type.value\n",
+    "    \n",
+    "    # Update init\n",
+    "    zoom_plot.update_init(n_phi=variables['n_phi'], n_theta=variables['n_theta'], h_2D=h_2D, focs=focs, \n",
+    "                          N=variables['ringArray_N_rings'], pt_source_pos=variables['pt_source_coordinate'],\n",
+    "                          parabola_rings=parabola_rings, center_instance=C, right_instance=R, parabolic=parabolic_calc)\n",
+    "    \n",
+    "    if value==1:\n",
+    "        zoom_plot.plot_zoom_parabola()\n",
+    "    if value==2:\n",
+    "        zoom_plot.plot_zoom_ringArray()\n",
+    "        \n",
+    "C.plot_zoom_bt.on_click(plot_zoom_rays)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "737bf647",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update the list of varables for calculations\n",
+    "variables = L.variables\n",
+    "\n",
+    "# projection plotting instance\n",
+    "proj_plot = plot_projection(n_phi=variables['n_phi'], n_theta=variables['n_theta'], h_2D=h_2D, focs=focs, inters=inters,\n",
+    "                         N=variables['ringArray_N_rings'], pt_source_pos=variables['pt_source_coordinate'],\n",
+    "                         parabola_rings=parabola_rings, center_instance=C, right_instance=R, parabolic=parabolic_calc)\n",
+    "\n",
+    "def plot_proj(*arg):\n",
+    "    # Update the list of varables for calculations\n",
+    "    variables = L.variables\n",
+    "    value = H.collector_type.value\n",
+    "    \n",
+    "    # Update init\n",
+    "    proj_plot.update_init(n_phi=variables['n_phi'], n_theta=variables['n_theta'], h_2D=h_2D, focs=focs, inters=inters,\n",
+    "                          N=variables['ringArray_N_rings'], pt_source_pos=variables['pt_source_coordinate'],\n",
+    "                          parabola_rings=parabola_rings, center_instance=C, right_instance=R, parabolic=parabolic_calc)\n",
+    "    \n",
+    "    if value==1:\n",
+    "        proj_plot.plot_proj_parabola()\n",
+    "    if value==2:\n",
+    "        proj_plot.plot_proj_ringArray()\n",
+    "        \n",
+    "C.plot_xy_bt.on_click(plot_proj)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d870b760",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0fb176939af445ebb65e9419a19a3ad7",
+       "model_id": "b58fa2ffe09044fabfa702e4a3c9d70e",
        "version_major": 2,
        "version_minor": 0
       },
