--- a/main.ipynb
+++ b/main.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5e94e4ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +35,8 @@
     "L_ringArray = L.design_ring_array()\n",
     "L_cylindrical = L.design_cylindrical()\n",
     "\n",
+    "L._left_content__variables_parabola()\n",
+    "\n",
     "app = widgets.AppLayout(header=H_design,\n",
     "                        left_sidebar=L_parabola,\n",
     "                        center=C_design,\n",
@@ -43,10 +44,13 @@
     "                        footer=widgets.Button())\n",
     "def changeLayout(*arg):\n",
     "    global app\n",
+    "    ipv.clear()\n",
     "    value = H.collector_type.value\n",
     "    if value == 1:\n",
+    "        L._left_content__variables_parabola()\n",
     "        app.left_sidebar = L_parabola\n",
     "    if value == 2:\n",
+    "        L._left_content__variables_ringarray()\n",
     "        app.left_sidebar = L_ringArray\n",
     "    if value == 3:\n",
     "        app.left_sidebar = L_cylindrical\n",
@@ -72,7 +76,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fa9d7430",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +141,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "34ebd8f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +175,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f7b4bb9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +211,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "83fdf409",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "737bf647",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,13 +277,12 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d870b760",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b58fa2ffe09044fabfa702e4a3c9d70e",
+       "model_id": "8efa4835ca054b0992766b717801abaa",
        "version_major": 2,
        "version_minor": 0
       },
