start coding the analysis section

--- a/main.ipynb
+++ b/main.ipynb
@@ -22,6 +22,7 @@
     "from Left_content import left_content\n",
     "from Center_content import  center_content\n",
     "from Right_content import right_content\n",
+    "from Footer_content import footer_content\n",
     "from plot_geometry import plot_geometry\n",
     "from plot_incident_rays import plot_incident_rays\n",
     "from plot_reflected_rays import plot_reflected_rays\n",
@@ -44,13 +45,17 @@
     "L_ringArray = L.design_ring_array()\n",
     "L_cylindrical = L.design_cylindrical()\n",
     "\n",
+    "F = footer_content()\n",
+    "F_design = F.tab\n",
+    "\n",
     "L._left_content__variables_parabola()\n",
     "\n",
     "app = widgets.AppLayout(header=H_design,\n",
     "                        left_sidebar=L_parabola,\n",
     "                        center=C_design,\n",
     "                        right_sidebar=R_design,\n",
-    "                        footer=widgets.Button())\n",
+    "                        footer=widgets.Box([]),\n",
+    "                        pane_heights = ['125px', '570px', '0px'])\n",
     "def changeLayout(*arg):\n",
     "    global app\n",
     "    ipv.clear()\n",
@@ -77,9 +82,23 @@
     "        app.left_sidebar = L_ringArray\n",
     "    if value == 3:\n",
     "        app.left_sidebar = L_cylindrical\n",
+    "        \n",
+    "def display_analysis(*arg):\n",
+    "    global app, C\n",
+    "    \n",
+    "    value = C.analysis_bt.value\n",
+    "    if value==True:\n",
+    "        app.footer = F_design\n",
+    "        C.analysis_bt.description = 'Hide analysis section'\n",
+    "        app.pane_heights = ['125px', '570px', '300px']\n",
+    "    else:\n",
+    "        app.footer = widgets.Box([])\n",
+    "        C.analysis_bt.description = 'Show analysis section'\n",
+    "        app.pane_heights = ['125px', '570px', '0px']\n",
     "\n",
     "H.collector_type.observe(changeLayout, 'value')\n",
-    "H.source_geometry.observe(updateSourceGeometry, 'value')\n"
+    "H.source_geometry.observe(updateSourceGeometry, 'value')\n",
+    "C.analysis_bt.observe(display_analysis, 'value')\n"
    ]
   },
   {
@@ -310,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "1f5fff68",
    "metadata": {},
    "outputs": [],
@@ -354,14 +373,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d24aae94",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b750d49ae827488d831ce8217e255f55",
+       "model_id": "e537362dfb804f0881ef95f1a57ed699",
        "version_major": 2,
        "version_minor": 0
       },
@@ -376,14 +395,6 @@
    "source": [
     "display(app)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce090db3-7179-417e-8818-8d45f74e1fd7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
