--- a/main.ipynb
+++ b/main.ipynb
@@ -337,12 +337,17 @@
     "# Update the list of varables for calculations\n",
     "variables = L.variables\n",
     "\n",
+    "# Define new variables useful for analysis\n",
+    "area = 0.0\n",
+    "data_2D = np.empty([variables['n_phi'], variables['n_theta']])\n",
+    "\n",
     "# projection plotting instance\n",
     "proj_plot = plot_projection(n_phi=variables['n_phi'], n_theta=variables['n_theta'], h_2D=h_2D, focs=focs, inters=inters,\n",
     "                         N=variables['ringArray_N_rings'], pt_source_pos=variables['pt_source_coordinate'],\n",
     "                         parabola_rings=parabola_rings, center_instance=C, right_instance=R, parabolic=parabolic_calc, cylinder=cyl_calc)\n",
     "\n",
     "def plot_proj(*arg):\n",
+    "    global data_2D, area\n",
     "    # Update the list of varables for calculations\n",
     "    variables = L.variables\n",
     "    value = H.collector_type.value\n",
@@ -353,14 +358,42 @@
     "                          parabola_rings=parabola_rings, center_instance=C, right_instance=R, parabolic=parabolic_calc, cylinder=cyl_calc)\n",
     "    \n",
     "    if value==1:\n",
-    "        proj_plot.plot_proj_parabola()\n",
+    "        data_2D, area = proj_plot.plot_proj_parabola()\n",
     "    if value==2:\n",
-    "        proj_plot.plot_proj_ringArray()\n",
+    "        data_2D, area = proj_plot.plot_proj_ringArray()\n",
     "    if value==3:\n",
-    "        proj_plot.plot_proj_cylinder()\n",
+    "        data_2D, area = proj_plot.plot_proj_cylinder()\n",
     "        \n",
     "C.plot_xy_bt.on_click(plot_proj)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5832a2a4-a2e8-4166-8ac8-16f3cbb4e436",
+   "metadata": {},
+   "source": [
+    "Make analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "128b484a-28c9-4d04-9c9e-fb01a72e3cd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_analysis(*arg):\n",
+    "    idx = F.tab_idx\n",
+    "    \n",
+    "    if idx == 0:\n",
+    "        F.plot_raw2D_datas(data_2D, area)\n",
+    "    if idx == 1:\n",
+    "        F.plot_thermal_datas()\n",
+    "    if idx == 2:\n",
+    "        F.plot_photovoltaic_datas()\n",
+    "    \n",
+    "F.plot_Analysis.on_click(make_analysis)"
    ]
   },
   {
@@ -373,14 +406,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d24aae94",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e537362dfb804f0881ef95f1a57ed699",
+       "model_id": "4c61381da19443bcb350ab735f01c844",
        "version_major": 2,
        "version_minor": 0
       },
