add requirement/environment files

--- a/testings.ipynb
+++ b/testings.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "757cf1ab",
+   "metadata": {},
+   "source": [
+    "\"scrip for generating requirements without the dependencies\":\n",
+    "\n",
+    "conda env export --from-history > environment.yml"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b0f02c92-9539-4ab3-ac39-5fd7435d4fb9",
